<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_single"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/movie_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Enter movie title"
                    android:hint="@string/movie_title"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/search_button"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-60dp"
                android:layout_marginLeft="-60dp"
                android:contentDescription="@string/search_for_a_movie"
                android:paddingBottom="5dp"
                android:src="@drawable/ic_search_black_24dp" />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/movie_release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Enter release date"
                android:hint="@string/release_date"
                android:inputType="date"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/movie_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_double"
            android:contentDescription="@string/movie_image" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_movie"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_double"
            android:text="@string/add_movie" />
    </LinearLayout>
</ScrollView>