<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.oleg.androidmvvm.viewmodel.AddViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activities.AddMovieActivity">

        <include
            android:id="@+id/toolbar_view"
            layout="@layout/toolbar_view_custom_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:text="@={model.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_view"
            android:autofillHints="@string/enter_title" />

        <EditText
            android:id="@+id/movie_release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:hint="@string/_1995"
            android:inputType="date"
            android:text="@={model.releaseDate}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/addMovieButton"
            style="@android:style/TextAppearance.Material.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorAccent"
            android:onClick="@{()-> model.saveMovie()}"
            android:text="@string/add_movie"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
            android:textColor="@color/backgroundLight"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_release_date"
            tools:targetApi="lollipop" />

        <ImageButton
            android:id="@+id/search_button"
            style="@android:style/Widget.Material.Light.ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/search_for_a_movie"
            android:src="@drawable/ic_search_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/movie_title"
            app:layout_constraintStart_toEndOf="@+id/movie_title"
            tools:targetApi="lollipop" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>